--- a/index.html
+++ b/index.html
@@ -1,68 +1,126 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ta">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>IITSM AI Teacher Chat</title>
-<style>
-body { font-family: Arial, sans-serif; background: #f8fafc; margin:0; padding:0; }
-#chatbox { height: 400px; overflow-y: auto; border:1px solid #ccc; padding:10px; margin:10px; background:#fff; }
-#userMessage { width: 75%; padding:8px; }
-#sendBtn { padding:8px 12px; }
-.message.user { color:#fff; background:#6366f1; padding:5px 10px; border-radius:5px; margin:5px 0; display:inline-block; }
-.message.ai { color:#334155; background:#e2e8f0; padding:5px 10px; border-radius:5px; margin:5px 0; display:inline-block; }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IITSM AI Premium Teacher Chat</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .chat-container { height: calc(100vh - 160px); }
+        .message-shadow { box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
+        ::-webkit-scrollbar { width: 5px; }
+        ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
+    </style>
 </head>
-<body>
+<body class="bg-slate-50">
 
-<h2 style="text-align:center;">IITSM AI Teacher Chat</h2>
+    <div class="max-w-2xl mx-auto bg-white shadow-xl min-h-screen flex flex-col">
+        <!-- Header -->
+        <div class="bg-indigo-600 p-4 text-white flex justify-between items-center">
+            <div>
+                <h1 class="text-lg font-bold">IITSM AI Teacher</h1>
+                <p class="text-xs opacity-80" id="statusText">Online | System Ready</p>
+            </div>
+            <div class="text-xs bg-indigo-500 px-2 py-1 rounded">
+                ID: <span id="displayLicense">Loading...</span>
+            </div>
+        </div>
 
-<div id="chatbox"></div>
-<input type="text" id="userMessage" placeholder="Type your question..." />
-<button id="sendBtn">Send</button>
+        <!-- Chat Area -->
+        <div id="chatbox" class="chat-container overflow-y-auto p-4 space-y-4 flex-grow">
+            <!-- AI Welcome Message -->
+            <div class="flex justify-start">
+                <div class="bg-slate-100 text-slate-800 p-3 rounded-lg max-w-[80%] message-shadow">
+                    வணக்கம்! நான் உங்களுக்கு எப்படி உதவ முடியும்?
+                </div>
+            </div>
+        </div>
 
-<script>
-// 1️⃣ Read license_id from URL
-const params = new URLSearchParams(window.location.search);
-const license_id = params.get("license_id");
-if(!license_id) alert("Warning: license_id missing!");
+        <!-- Input Area -->
+        <div class="p-4 border-t bg-white">
+            <div class="flex gap-2">
+                <input type="text" id="userMessage" 
+                    class="flex-grow border border-slate-200 p-3 rounded-xl focus:outline-none focus:ring-2 focus:ring-indigo-500" 
+                    placeholder="உங்கள் கேள்வியைக் கேளுங்கள்...">
+                <button id="sendBtn" class="bg-indigo-600 text-white px-6 py-3 rounded-xl font-medium hover:bg-indigo-700 transition-all flex items-center">
+                    Send
+                </button>
+            </div>
+            <p class="text-[10px] text-slate-400 mt-2 text-center">Powered by IITSM AI Teacher Node</p>
+        </div>
+    </div>
 
-// 2️⃣ Chatbox DOM
-const chatbox = document.getElementById("chatbox");
+    <script>
+        // 1. URL-லிருந்து தரவுகளைச் சேகரித்தல்
+        const params = new URLSearchParams(window.location.search);
+        const license_id = params.get("license_id") || "GUEST_USER";
+        const current_page_url = window.location.href;
+        
+        document.getElementById("displayLicense").innerText = license_id;
 
-// 3️⃣ Send message function
-document.getElementById("sendBtn").addEventListener("click", async () => {
-  const msg = document.getElementById("userMessage").value.trim();
-  if(!msg) return;
+        const chatbox = document.getElementById("chatbox");
+        const userMessage = document.getElementById("userMessage");
+        const sendBtn = document.getElementById("sendBtn");
 
-  // Show user message
-  chatbox.innerHTML += `<div class="message user"><b>You:</b> ${msg}</div>`;
+        // UI-ல் மெசேஜைக் காட்டும் பங்க்ஷன்
+        function appendMessage(role, text) {
+            const isUser = role === 'user';
+            const msgHtml = `
+                <div class="flex ${isUser ? 'justify-end' : 'justify-start'} mb-2">
+                    <div class="${isUser ? 'bg-indigo-600 text-white' : 'bg-slate-100 text-slate-800'} p-3 rounded-2xl max-w-[85%] message-shadow">
+                        <p class="text-sm">${text}</p>
+                    </div>
+                </div>
+            `;
+            chatbox.insertAdjacentHTML('beforeend', msgHtml);
+            chatbox.scrollTop = chatbox.scrollHeight;
+        }
 
-  // POST to n8n webhook
-  try {
-    const res = await fetch("https://n8n.srv933517.hstgr.cloud/webhook/dd36755c-72c7-40a1-823a-c54d493664c0/chat", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        license_id: license_id,
-        message: msg
-      })
-    });
-    const data = await res.json();
+        // மெசேஜ் அனுப்பும் பங்க்ஷன்
+        async function sendMessage() {
+            const msg = userMessage.value.trim();
+            if (!msg) return;
 
-    // Show AI response
-    if(data?.reply){
-      chatbox.innerHTML += `<div class="message ai"><b>AI:</b> ${data.reply}</div>`;
-      chatbox.scrollTop = chatbox.scrollHeight;
-    }
-  } catch(err){
-    chatbox.innerHTML += `<div class="message ai" style="color:red;"><b>AI:</b> Error connecting to server</div>`;
-  }
+            appendMessage('user', msg);
+            userMessage.value = "";
+            
+            // Loading Indicator
+            const loadingId = "load-" + Date.now();
+            chatbox.insertAdjacentHTML('beforeend', `<div id="${loadingId}" class="text-xs text-slate-400 italic">AI யோசிக்கிறது...</div>`);
 
-  document.getElementById("userMessage").value = "";
-  chatbox.scrollTop = chatbox.scrollHeight;
-});
-</script>
+            try {
+                const response = await fetch("https://n8n.srv933517.hstgr.cloud", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({
+                        license_id: license_id,
+                        message: msg,
+                        source_url: current_page_url,
+                        timestamp: new Date().toISOString()
+                    })
+                });
+
+                const data = await response.json();
+                document.getElementById(loadingId).remove();
+
+                if (data && data.reply) {
+                    appendMessage('ai', data.reply);
+                } else {
+                    appendMessage('ai', "மன்னிக்கவும், என்னால் பதில் அளிக்க முடியவில்லை.");
+                }
+            } catch (error) {
+                document.getElementById(loadingId).remove();
+                appendMessage('ai', "Error: சர்வர் இணைப்பில் சிக்கல் உள்ளது.");
+                console.error("n8n Error:", error);
+            }
+        }
+
+        // Event Listeners
+        sendBtn.addEventListener("click", sendMessage);
+        userMessage.addEventListener("keypress", (e) => {
+            if (e.key === "Enter") sendMessage();
+        });
+    </script>
 
 </body>
 </html>
