--- a/index.html
+++ b/index.html
@@ -3,72 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IITSM AI Premium Teacher Chat</title>
+    <title>IITSM AI Teacher - Live Chat</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        .chat-container { height: calc(100vh - 160px); }
-        .message-shadow { box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
-        ::-webkit-scrollbar { width: 5px; }
-        ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
+        .chat-container { height: calc(100vh - 180px); }
+        ::-webkit-scrollbar { width: 4px; }
+        ::-webkit-scrollbar-thumb { background: #e2e8f0; border-radius: 10px; }
+        .animate-fadeIn { animation: fadeIn 0.3s ease-out; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
 <body class="bg-slate-50">
 
-    <div class="max-w-2xl mx-auto bg-white shadow-xl min-h-screen flex flex-col">
+    <div class="max-w-md mx-auto bg-white shadow-2xl min-h-screen flex flex-col">
         <!-- Header -->
-        <div class="bg-indigo-600 p-4 text-white flex justify-between items-center">
-            <div>
-                <h1 class="text-lg font-bold">IITSM AI Teacher</h1>
-                <p class="text-xs opacity-80" id="statusText">Online | System Ready</p>
+        <div class="bg-indigo-700 p-4 text-white flex justify-between items-center shadow-md">
+            <div class="flex items-center gap-3">
+                <div class="w-8 h-8 bg-white rounded-full flex items-center justify-center text-indigo-700 font-bold">IT</div>
+                <div>
+                    <h1 class="font-bold text-sm">IITSM AI Teacher</h1>
+                    <p class="text-[10px] text-indigo-200">Live Support 2026</p>
+                </div>
             </div>
-            <div class="text-xs bg-indigo-500 px-2 py-1 rounded">
-                ID: <span id="displayLicense">Loading...</span>
+            <div class="text-[10px] bg-indigo-800 px-2 py-1 rounded">
+                ID: <span id="licenseDisplay">...</span>
             </div>
         </div>
 
-        <!-- Chat Area -->
-        <div id="chatbox" class="chat-container overflow-y-auto p-4 space-y-4 flex-grow">
-            <!-- AI Welcome Message -->
+        <!-- Chat Box -->
+        <div id="chatbox" class="chat-container overflow-y-auto p-4 space-y-4 bg-slate-50/50">
+            <!-- Welcome -->
             <div class="flex justify-start">
-                <div class="bg-slate-100 text-slate-800 p-3 rounded-lg max-w-[80%] message-shadow">
-                    வணக்கம்! நான் உங்களுக்கு எப்படி உதவ முடியும்?
+                <div class="bg-white border border-slate-200 p-3 rounded-2xl rounded-tl-none shadow-sm text-sm text-slate-800">
+                    வணக்கம்! உங்களின் கல்வி தொடர்பான கேள்விகளைக் கேட்கலாம்.
                 </div>
             </div>
         </div>
 
-        <!-- Input Area -->
-        <div class="p-4 border-t bg-white">
-            <div class="flex gap-2">
+        <!-- Input Section -->
+        <div class="p-4 bg-white border-t">
+            <div class="flex items-center gap-2">
                 <input type="text" id="userMessage" 
-                    class="flex-grow border border-slate-200 p-3 rounded-xl focus:outline-none focus:ring-2 focus:ring-indigo-500" 
-                    placeholder="உங்கள் கேள்வியைக் கேளுங்கள்...">
-                <button id="sendBtn" class="bg-indigo-600 text-white px-6 py-3 rounded-xl font-medium hover:bg-indigo-700 transition-all flex items-center">
-                    Send
+                    class="flex-grow border border-slate-200 p-3 rounded-xl focus:ring-2 focus:ring-indigo-500 outline-none text-sm" 
+                    placeholder="கேள்வியைத் தட்டச்சு செய்க...">
+                <button id="sendBtn" class="bg-indigo-600 text-white p-3 rounded-xl hover:bg-indigo-700 transition-all">
+                    <svg xmlns="http://www.w3.org" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8" />
+                    </svg>
                 </button>
             </div>
-            <p class="text-[10px] text-slate-400 mt-2 text-center">Powered by IITSM AI Teacher Node</p>
         </div>
     </div>
 
     <script>
-        // 1. URL-லிருந்து தரவுகளைச் சேகரித்தல்
+        // 1. Production Webhook URL
+        const WEBHOOK_URL = "https://n8n.srv933517.hstgr.cloud/webhook/e3c22e61-682d-464a-b0c6-b5933711303f";
+
+        // 2. Metadata Collection
         const params = new URLSearchParams(window.location.search);
-        const license_id = params.get("license_id") || "GUEST_USER";
-        const current_page_url = window.location.href;
-        
-        document.getElementById("displayLicense").innerText = license_id;
+        const license_id = params.get("license_id") || "GUEST";
+        document.getElementById("licenseDisplay").innerText = license_id.substring(0, 8) + "...";
 
         const chatbox = document.getElementById("chatbox");
-        const userMessage = document.getElementById("userMessage");
+        const userMsgInput = document.getElementById("userMessage");
         const sendBtn = document.getElementById("sendBtn");
 
-        // UI-ல் மெசேஜைக் காட்டும் பங்க்ஷன்
-        function appendMessage(role, text) {
+        function addMessage(role, text) {
             const isUser = role === 'user';
             const msgHtml = `
-                <div class="flex ${isUser ? 'justify-end' : 'justify-start'} mb-2">
-                    <div class="${isUser ? 'bg-indigo-600 text-white' : 'bg-slate-100 text-slate-800'} p-3 rounded-2xl max-w-[85%] message-shadow">
-                        <p class="text-sm">${text}</p>
+                <div class="flex ${isUser ? 'justify-end' : 'justify-start'} animate-fadeIn">
+                    <div class="${isUser ? 'bg-indigo-600 text-white' : 'bg-white border border-slate-200 text-slate-800'} p-3 rounded-2xl ${isUser ? 'rounded-tr-none' : 'rounded-tl-none'} shadow-sm max-w-[85%] text-sm">
+                        ${text}
                     </div>
                 </div>
             `;
@@ -76,26 +81,26 @@
             chatbox.scrollTop = chatbox.scrollHeight;
         }
 
-        // மெசேஜ் அனுப்பும் பங்க்ஷன்
         async function sendMessage() {
-            const msg = userMessage.value.trim();
+            const msg = userMsgInput.value.trim();
             if (!msg) return;
 
-            appendMessage('user', msg);
-            userMessage.value = "";
-            
-            // Loading Indicator
-            const loadingId = "load-" + Date.now();
-            chatbox.insertAdjacentHTML('beforeend', `<div id="${loadingId}" class="text-xs text-slate-400 italic">AI யோசிக்கிறது...</div>`);
+            addMessage('user', msg);
+            userMsgInput.value = "";
+
+            // Show Loading
+            const loadingId = "loading-" + Date.now();
+            chatbox.insertAdjacentHTML('beforeend', `<div id="${loadingId}" class="text-[10px] text-slate-400 italic">AI பதிலளிக்கிறது...</div>`);
+            chatbox.scrollTop = chatbox.scrollHeight;
 
             try {
-                const response = await fetch("https://n8n.srv933517.hstgr.cloud", {
+                const response = await fetch(WEBHOOK_URL, {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({
                         license_id: license_id,
                         message: msg,
-                        source_url: current_page_url,
+                        source_url: window.location.href, // தற்போதைய URL-ஐ அனுப்புகிறது
                         timestamp: new Date().toISOString()
                     })
                 });
@@ -103,24 +108,22 @@
                 const data = await response.json();
                 document.getElementById(loadingId).remove();
 
-                if (data && data.reply) {
-                    appendMessage('ai', data.reply);
+                // n8n பதில் (Response)
+                if (data && (data.reply || data.output)) {
+                    addMessage('ai', data.reply || data.output);
                 } else {
-                    appendMessage('ai', "மன்னிக்கவும், என்னால் பதில் அளிக்க முடியவில்லை.");
+                    addMessage('ai', "மன்னிக்கவும், என்னால் இப்போது பதிலளிக்க முடியவில்லை.");
                 }
+
             } catch (error) {
-                document.getElementById(loadingId).remove();
-                appendMessage('ai', "Error: சர்வர் இணைப்பில் சிக்கல் உள்ளது.");
-                console.error("n8n Error:", error);
+                if(document.getElementById(loadingId)) document.getElementById(loadingId).remove();
+                addMessage('ai', "Error: n8n சர்வர் இணைப்பில் சிக்கல் உள்ளது. CORS மற்றும் Webhook நிலையைச் சரிபார்க்கவும்.");
+                console.error("Connection Error:", error);
             }
         }
 
-        // Event Listeners
         sendBtn.addEventListener("click", sendMessage);
-        userMessage.addEventListener("keypress", (e) => {
-            if (e.key === "Enter") sendMessage();
-        });
+        userMsgInput.addEventListener("keypress", (e) => { if (e.key === "Enter") sendMessage(); });
     </script>
-
 </body>
 </html>
