--- a/index.html
+++ b/index.html
@@ -8,45 +8,46 @@
     <!-- n8n Chat CSS -->
     <link href="https://cdn.jsdelivr.net" rel="stylesheet" />
     <style>
-        body { font-family: 'Segoe UI', sans-serif; background-color: #f3f4f6; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
-        .container { background: white; padding: 40px; border-radius: 20px; box-shadow: 0 4px 20px rgba(0,0,0,0.08); text-align: center; }
-        .license-tag { background: #dee2ff; color: #4338ca; padding: 8px 15px; border-radius: 50px; font-weight: 600; margin-top: 15px; display: inline-block; }
+        body { font-family: 'Segoe UI', sans-serif; background: #f9fafb; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
+        .container { background: white; padding: 30px; border-radius: 16px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); text-align: center; max-width: 400px; }
+        .status-badge { background: #dcfce7; color: #166534; padding: 6px 12px; border-radius: 20px; font-size: 14px; font-weight: bold; margin-bottom: 15px; display: inline-block; }
+        .license-text { color: #4338ca; font-weight: bold; font-size: 16px; word-break: break-all; }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <h1 style="color: #111827; margin-bottom: 10px;">IITSM AI Teacher Chat System</h1>
-        <p style="color: #4b5563;">வலது கீழ் பக்கத்தில் உள்ள சாட் குமிழியை கிளிக் செய்யவும்.</p>
-        <div class="license-tag">
-            License ID: <span id="ldisplay">Checking...</span>
-        </div>
+        <div class="status-badge">System Live (2026)</div>
+        <h1 style="color: #111827; font-size: 22px;">IITSM AI Teacher Chat</h1>
+        <p style="color: #4b5563; font-size: 14px;">வலது கீழ் பக்கத்தில் உள்ள சாட் ஐகானை கிளிக் செய்யவும்.</p>
+        <hr style="margin: 20px 0; border: 0; border-top: 1px solid #eee;">
+        <div id="ldisplay" class="license-text">License ID: சரிபார்க்கப்படுகிறது...</div>
     </div>
 
     <!-- n8n Chat JavaScript -->
     <script type="module">
         import { createChat } from 'https://cdn.jsdelivr.net';
 
-        // 1. URL-லிருந்து license_id ஐப் பெறுகிறது
-        const urlParams = new URLSearchParams(window.location.search);
-        const licenseID = urlParams.get("license_id") || "ID NOT FOUND";
-        
-        // திரையில் ஐடியைக் காட்டுகிறது
-        document.getElementById("ldisplay").innerText = licenseID;
+        // 1. URL பாராமீட்டரைச் சரியாகப் பெறுதல்
+        const getLicense = () => {
+            const urlParams = new URLSearchParams(window.location.search);
+            return urlParams.get("license_id");
+        };
 
-        // 2. n8n Chat-ஐ லோட் செய்கிறது
-        window.addEventListener('DOMContentLoaded', () => {
-            createChat({
-                webhookUrl: 'https://n8n.srv933517.hstgr.cloud',
-                mode: 'window',
-                showWelcomeScreen: true,
-                title: 'IITSM AI Support',
-                welcomeMessage: 'வணக்கம்! நான் உங்களுக்கு எப்படி உதவ முடியும்?',
-                metadata: {
-                    license_id: licenseID,
-                    full_url: window.location.href
-                }
-            });
+        const licenseID = getLicense() || "GUEST-ACCESS";
+        document.getElementById("ldisplay").innerText = "ID: " + licenseID;
+
+        // 2. n8n Chat-ஐ இயக்குதல்
+        createChat({
+            webhookUrl: 'https://n8n.srv933517.hstgr.cloud',
+            mode: 'window',
+            showWelcomeScreen: true,
+            title: 'IITSM AI Support',
+            welcomeMessage: `வணக்கம்! (ID: ${licenseID}). நான் உங்களுக்கு எப்படி உதவ முடியும்?`,
+            metadata: {
+                license_id: licenseID,
+                current_url: window.location.href
+            }
         });
     </script>
 
