--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IITM AI Teacher - Interactive Chat</title>
+    <title>IITSM AI Teacher - Interactive Chat</title>
     <style>
         :root {
             --primary: #4f46e5;
@@ -175,7 +175,7 @@
     <header>
         <div class="avatar">🤖</div>
         <div class="header-info">
-            <h3>IITM AI Teacher</h3>
+            <h3>IITSM AI Teacher</h3>
             <p>● Online</p>
         </div>
     </header>
@@ -195,7 +195,7 @@
             <h2>Learning made easy!</h2>
             <p style="opacity: 0.9; margin-top: 10px; line-height: 1.6;">
                 Did you like this chat style? <br>
-                The <b>IITM AI Teacher App</b> explains <i>every</i> chapter in Math & Science just like this.
+                The <b>IITSM AI Teacher App</b> explains <i>every</i> chapter in Math & Science just like this ( 6- 10 SCIENCE AND MATHS ) .
             </p>
             <hr style="border-color: rgba(255,255,255,0.2); margin: 20px 0;">
             <p style="font-size: 14px;">👇 Click below to get your personal AI Tutor</p>
@@ -204,7 +204,7 @@
                 Download App Now
             </a>
         </div>
-        <p style="margin-top: 20px; font-size: 12px; color: #6b7280;">Powered by IIT Madras Technology</p>
+        <p style="margin-top: 20px; font-size: 12px; color: #6b7280;">Powered by IITSM AI Teacher </p>
     </div>
 </div>
 
